--- a/packer/http/ks.cfg
+++ b/packer/http/ks.cfg
@@ -10,7 +10,6 @@ url --mirrorlist="http://mirrorlist.centos.org/?release=8&arch=x86_64&repo=BaseO
 keyboard --vckeymap=us --xlayouts='us'
 # System language
 lang en_US.UTF-8
-
 # Network information
 network  --bootproto=dhcp --device=enp0s3 --ipv6=auto --activate
 network  --hostname=centos8-net.local
@@ -26,9 +25,8 @@ skipx
 # System services
 services --enabled=chronyd,NetworkManager,sshd
 # System timezone
-timezone Europe/Rome --isUtc
-user --groups=wheel --name=vagrant --password=$6$HaBmdWXNP3ecO8Xp$u2OgI/99re7NyK3cglTXfLiCYB8LHOAW8CTpzRpUM2kZDGhblTQjjRd.4Ef/xbHAvVWFnSH3ztU1cz2jIe6qt0 --iscrypted
-reboot
+timezone America/Fort_Nelson --isUtc
+user --groups=svc-ansible --name=svc-ansible --password=$6$HaBmdWXNP3ecO8Xp$u2OgI/99re7NyK3cglTXfLiCYB8LHOAW8CTpzRpUM2kZDGhblTQjjRd.4Ef/xbHAvVWFnSH3ztU1cz2jIe6qt0 --iscryptedreboot
 
 %packages --ignoremissing
 @^minimal-environment
