--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -47,3 +47,11 @@ jobs:
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve -var "vsphere_password=${{ secrets.vsphere_password }}" -var "vsphere_user=${{ secrets.vsphere_user }}"
+
+    - name: Run Ansible playbook to register hosts
+      env: 
+        ANSIBLE_USER: "${{ secrets.ANSIBLE_USER}}"
+        ANSIBLE_PASSWORD: "${{ secrets.ANSIBLE_PASSWORD }}"
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      working-directory: ./ansible
+      run: ansible-playbook -i ./inventory/hosts Configure-DNS.yml -vvv
