--- a/ansible/playbooks/Configure-DNS.yml
+++ b/ansible/playbooks/Configure-DNS.yml
@@ -1,4 +1,5 @@
 - hosts: all
+  become: true
   vars:
     ANSIBLE_USER: "{{ lookup('env', 'ANSIBLE_USER') }}"
     ANSIBLE_PASSWORD: "{{ lookup('env', 'ANSIBLE_PASSWORD') }}"
@@ -8,3 +9,5 @@
     hostname:
       name: "{{ inventory_hostname }}"
       use: systemd
+
+- name: Configure DNS server on server
