add dns role to install bind and set vsphere creds to sensitive

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -11,7 +11,7 @@
 
 # some basic default values...
 
-inventory      = $HOME/.ansible/hosts
+inventory      = ./inventory/hosts.yml
 remote_tmp     = $HOME/.ansible/tmp
 forks          = 150
 sudo_user      = root
@@ -72,6 +72,9 @@ fact_caching_timeout = 600
 # retry files
 #retry_files_enabled = False
 retry_files_save_path = ~/.ansible/retry
+
+[inventory]
+enable_plugins = host_list, script, yaml, ini, toml
 
 [privilege_escalation]
 #become=True
