--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -1,16 +1,26 @@
 all:
   children:
     vsphere:
-      hosts:
-        bzd-kubespray01:
-           ansible_host: 10.0.30.164
-        bzd-kubespray02:
-          ansible_host: 10.0.30.166
-        bzd-kubespray03:
-          ansible_host: 10.0.30.165
-        bzp1-ansible:
-          ansible_host: 10.0.30.145
-        unifi:
-          ansible_host: 10.0.4.10
+      children:
+        dns_servers:
+          hosts:
+            bzd-bind01:
+              ansible_host: 10.0.30.167
+        kubernetes:
+          hosts:
+            bzd-kubespray01:
+               ansible_host: 10.0.30.164
+            bzd-kubespray02:
+              ansible_host: 10.0.30.166
+            bzd-kubespray03:
+              ansible_host: 10.0.30.165
+        ansible:
+          hosts:
+            bzp1-ansible:
+              ansible_host: 10.0.30.145
+        network:
+          hosts:
+            unifi:
+              ansible_host: 10.0.4.10
     azure:
 
