--- a/ansible/playbooks/Configure-DNS.yml
+++ b/ansible/playbooks/Configure-DNS.yml
@@ -1,4 +1,5 @@
-- hosts: all
+- name: Set Hostname on all hosts based on hosts inventory file
+  hosts: all
   become: true
   vars:
     ANSIBLE_USER: "{{ lookup('env', 'ANSIBLE_USER') }}"
@@ -11,3 +12,16 @@
       use: systemd
 
 - name: Configure DNS server on server
+  hosts: dns_servers
+  become: true
+  var:
+    ANSIBLE_USER: "{{ lookup('env', 'ANSIBLE_USER') }}"
+    ANSIBLE_PASSWORD: "{{ lookup('env', 'ANSIBLE_PASSWORD') }}"
+    become_password: "{{ ansible_password }}"
+  roles:
+  - role: dns
+    dns_servers:
+    - 1.1.1.1
+    - 1.0.0.1
+    dns_domains:
+    - bsorenson.io
