change playbook location

--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -54,4 +54,4 @@ jobs:
         ANSIBLE_PASSWORD: "${{ secrets.ANSIBLE_PASSWORD }}"
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       working-directory: ./ansible
-      run: ansible-playbook -i ./inventory/hosts Configure-DNS.yml -vvv
+      run: ansible-playbook -i ./inventory/hosts ./playbooks/Configure-DNS.yml -vvv
