--- a/ansible/playbooks/Configure-DNS.yml
+++ b/ansible/playbooks/Configure-DNS.yml
@@ -15,8 +15,8 @@
   hosts: dns_servers
   become: true
   vars:
-    ANSIBLE_USER: "{{ lookup('env', 'ANSIBLE_USER') }}"
-    ANSIBLE_PASSWORD: "{{ lookup('env', 'ANSIBLE_PASSWORD') }}"
+    ansible_user: "{{ lookup('env', 'ANSIBLE_USER') }}"
+    ansible_password: "{{ lookup('env', 'ANSIBLE_PASSWORD') }}"
     become_password: "{{ ansible_password }}"
     dns_servers:
     - 1.1.1.1
