Adding initial VPN Gateway,

--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -6,6 +6,7 @@ all:
           hosts:
             bzd-bind01:
               ansible_host: 10.0.30.167
+              
         kubernetes:
           hosts:
             bzd-kubespray01:
@@ -18,9 +19,9 @@ all:
           hosts:
             bzp1-ansible:
               ansible_host: 10.0.30.145
-        network:
-          hosts:
-            unifi:
-              ansible_host: 10.0.4.10
+        # network:
+        #   hosts:
+        #     unifi:
+        #       ansible_host: 10.0.4.10
     azure:
 
