Adding configuration for Letsencrypt and Nginx for Unifi controller

--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -10,7 +10,7 @@ all:
         kubernetes:
           hosts:
             bzd-kubespray01:
-               ansible_host: 10.0.30.164
+              ansible_host: 10.0.30.164
             bzd-kubespray02:
               ansible_host: 10.0.30.166
             bzd-kubespray03:
@@ -19,9 +19,9 @@ all:
           hosts:
             bzp1-ansible:
               ansible_host: 10.0.30.145
-        # network:
-        #   hosts:
-        #     unifi:
-        #       ansible_host: 10.0.4.10
+        network:
+          hosts:
+            unifi:
+              ansible_host: 10.0.4.10
     azure:
 
