--- a/ansible/playbooks/ansible.cfg
+++ b/ansible/playbooks/ansible.cfg
@@ -11,7 +11,7 @@
 
 # some basic default values...
 
-inventory      = ./inventory/hosts.yml
+inventory      = ../inventory/hosts.yml
 remote_tmp     = $HOME/.ansible/tmp
 forks          = 150
 sudo_user      = root
@@ -26,8 +26,8 @@ transport      = smart
 gathering = smart
 
 # additional paths to search for roles in, colon separated
-roles_path    = ./roles
-playbook_path = ./playbooks
+roles_path    = ../roles
+playbook_path = ./
 
 # uncomment this to disable SSH key host checking
 host_key_checking = False
