--- a/ansible/roles/Configure-Ubiquiti/tasks/main.yml
+++ b/ansible/roles/Configure-Ubiquiti/tasks/main.yml
@@ -9,9 +9,9 @@
   
 
 - name: Import tasks for nginx installation
-  ansible.builtin.import_tasks:
-  with_first_found: 
-    - "install-nginx-{{ ansible_distribution }}-{{ ansible_distribution_major_version}}.yml"
+  ansible.builtin.include_tasks: "{{ item }}"
+  with_first_found:
+    - install-nginx-{{ ansible_distribution }}-{{ ansible_distribution_major_version}}.yml
     - install-nginx-{{ansible-distribution }}.yml
 
 - name: Import tasks for unifi installation and config
