--- a/ansible/roles/Install-Bind/defaults/main.yml
+++ b/ansible/roles/Install-Bind/defaults/main.yml
@@ -140,7 +140,7 @@ bind__default_zones:
     source_url: https://www.internic.net/domain/named.cache
     # the url from which to retrieve the root names servers list
     source_checksum:
-      'sha256:18dc5af7b8113d1ef4bb896f9b0beb808755a7ec52be4798fe9332aa27c2553f'
+      'sha256:a73fddc956b00eca4f9ffa5c03bb4d56a957b9d04b08d29ed281197c0e16ffb3'
     # Don't produce fail state if the checksum mismatch
     source_ignore_errors: false
   localhost.localdomain:
@@ -203,10 +203,7 @@ bind__group_zones: {}
 bind__host_zones: {}
 
 # Combine all enabled mods
-bind__zones: '{{ bind__default_zones
-                     | combine(bind__global_zones)
-                     | combine(bind__group_zones)
-                     | combine(bind__host_zones) }}'
+bind__zones: "{{ bind__default_zones| combine(bind__global_zones)| combine(bind__group_zones)| combine(bind__host_zones) }}"
 
 # Default TTL
 bind__zones_default_ttl: 604800
