--- a/ansible/playbooks/Provision.yml
+++ b/ansible/playbooks/Provision.yml
@@ -1,23 +1,11 @@
 - name: Configuring Golden Image
-  hosts: all
-  connection: local
+  hosts: kubernetes
+  connection: ssh
   become: true
-  vars:
-    ANSIBLE_USER: "{{ lookup('env', 'ANSIBLE_USER') }}"
-    ANSIBLE_PASSWORD: "{{ lookup('env', 'ANSIBLE_PASSWORD') }}"
-    ansible_become_password: "{{ ANSIBLE_PASSWORD }}"
   roles:
-  - name: Update-CentOS
-    tags:
-    - Update-CentOS
-    - ever
   - name: Install-Python
     tags:
     - Install-Python
-    - ever
-  - name: Create-User
-    tags:
-    - Create-User
     - ever
   - name: Install-SSH-Keys 
     tags:
@@ -27,3 +15,10 @@
     tags:
     - ever
     - Add-Sudoers
+  tasks:
+  - name: Update Ubuntu
+    apt:
+      name: "*"
+      state: latest
+
+
